# HandEyeCalibration

./: .gitignore  CMakeLists.txt  README.md  data.txt  package.xml  setup.py
scripts/: hand_eye_calibration_helper.py
src/externaldevice/: __init__.py
src/recorder/: __init__.py  filerecorder.py
