<?xml version="1.0"?>
<package>
  <name>hand_eye_calibration</name>
  <version>0.1.0</version>
  <description>
    This is an autotomatic hand-eye calibration program for Kinect V2.0 together with Sawyer Rethink robot arm.
  </description>

  <maintainer email="yuan.tian@midea.com">
	Midea Group
  </maintainer>
  <license>Apache 2.0</license>
  <url type="repository">
  </url>
  <author>Midea ETC</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>intera_motion_msgs</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_motion_msgs</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>joystick_drivers</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
